using css to preload and display on click -- no stupid links

--- a/gallery.html
+++ b/gallery.html
@@ -11,6 +11,6 @@
     <p>probs what you all came for</p>
     <p> but i don't know had to add them yet &#128528;</p>
 
-    <a href="index.html" >home</a>
+    <a href="index.php" >home</a>
   </body>
 </html>
