--- a/real.html
+++ b/real.html
@@ -7,6 +7,9 @@
     <title></title>
   </head>
   <body>
-    <p class="closeParagraph" >i don't know what to put here &#128528; <br><a href="index.php">HOME</a></p>
+    <p class="closeParagraph" >i don't know what to put here &#128528; <br><a id="link" href="index.php">HOME</a></p>
+
+    <script type="text/javascript" src="js/hover.js"></script>
+
   </body>
 </html>
