--- a/real.html
+++ b/real.html
@@ -3,13 +3,49 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title></title>
-  </head>
-  <body>
-    <p class="closeParagraph" >i don't know what to put here &#128528; <br><a id="link" href="index.php">HOME</a></p>
 
-    <script type="text/javascript" src="js/hover.js"></script>
+    <title>gus d stevens</title>
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/real.css">
+
+  </head>
+  <body onload="loadGradient()">
+
+    <img id="img1" src="img/img3.jpg">
+    <img id="img2" src="img/img16.jpg">
+    <img id="img3" src="img/hrz3.jpg">
+
+
+    <div id="square" width=150px height=150px></div>
+
+    <div id="link">
+      <h3><a id="home" href="index.php">HOME</a></h3>
+    </div>
+
+    <div id="text1">
+      <p>buy a print pls</a>
+    </div>
+
+    <div id="text2">
+      <p>
+        there's not much here
+        <br>
+        check out the insta tho
+      </p>
+      <h3><a id="insta" href="https://www.instagram.com/gus.stevens/" target="_blank">INSTAGRAM</a></h3>
+    </div>
+
+    <!-- <div id="instagram">
+      <a href="https://www.instagram.com/gus.stevens/" target="_blank">
+      <img src="obj/ig.png" alt="instagram">
+      </a>
+    </div> -->
+
+
+
+
+    <script type="text/javascript" src="js/loadRandomImg.js"></script>
 
   </body>
 </html>
