working on real layout

--- a/gallery.html
+++ b/gallery.html
@@ -8,9 +8,8 @@
   </head>
   <body>
     <h3>the photos</h3>
-    <p>probs what you all came for</p>
-    <p> but i don't know had to add them yet &#128528;</p>
-
-    <a href="index.php" >home</a>
+    <p>nothing is here yet</p>
+    <p>you can check out the insta tho</p>
+    <h3><a id="insta" href="https://www.instagram.com/gus.stevens/" target="_blank">INSTAGRAM</a></h3>
   </body>
 </html>
