--- a/analog.html
+++ b/analog.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -10,6 +11,7 @@
       gtag('config', 'UA-206931718-1');
     </script>
 
+
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -20,43 +22,44 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>HOME</title>
-
-    <meta name="Keywords" content="photography, film, 35mm, analog, analogue">
-    <meta name="Description" content="gus stevens is a film photographer in salt lake city, ut">
-
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/entrance.css">
-
+    <link rel="stylesheet" type="text/css" href="css/analog.css">
+    <title>ANALOG</title>
   </head>
-
-  <body onload="randomGradient();randomImg();">
+  <body onload="loadGradient()">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K9X36MD"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <!-- all pics will preload everything in the img and obj directory -->
-    <div id="preload">
-      <?php include 'php/all_pics.php';?>
+    <div class="topDivider">
+      <div class="left">
+      <h3><a id="home" href="real.php">BACK</a></h3>
+      </div>
     </div>
 
-    <!-- change the src on clicks -->
-    <img onclick="randomImg();" id="hidden-content" width="100%">
-    <img onclick="randomImg();" id="content" width="100%">
-    <div id="link">
-      <a id="real" href="real.php">ENTER</a>
-    </div>
+    <div id="canvasWrapper">
 
-    <div onclick="randomImg();randomGradient();" class="square" id="square1" width=150px height=150px>
-      <!-- <p id="hexText"></p> -->
+
+        <div id="imgstrips">
+          <div id="text1">
+            <p>an analog website doesn't make too <br> much sense
+              <br>
+              <br>
+              but here are some film strips... </p>
+          </div>
+          <img src="img/1.png">
+          <img src="img/2.png">
+          <img src="img/3.png">
+          <img src="img/4.png">
+          <img src="img/5.png">
+
+        </div>
+
     </div>
 
     <script type="text/javascript" src="js/gradients.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
-
-    <!-- <script type="text/javascript" src="js/index.js"></script> -->
+    <script type="text/javascript" src="js/default.js"></script>
 
   </body>
 </html>
